# rfb-cnpj-fetcher

./: .gitignore  README.md  fetch-datafiles.py  fetch-index-html.py  fetch.py  get-metadata.py  pyproject.toml
rfb_cnpj/: collect.py  metadata.py  scraper.py  storage.py
rfb_cnpj_fetcher/: constants.py  fetcher.py  meta.py  storage.py
