[tool.poetry]
name = "rfb-cnpj"
version = "0.1.0"
description = "Dados CNPJ Receita Federal do Brasil"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
httpx = "^0.23.0"
lxml = "^4.9.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
