[tool.poetry]
name = "rfb-cnpj-fetcher"
version = "0.1.0"
description = "Dados CNPJ Receita Federal do Brasil"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "*"
tqdm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
